force-app/main/default/objects/ServiceLog__c/fields/Actual_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_DateTime__c</fullName>
    <label>Actual End Date Time</label>
    <type>DateTime</type>
</CustomField>