force-app/main/default/objects/ServiceLog__c/fields/AgencyServices__c.field-meta.xml
<CustomField>
    <fullName>AgencyServices__c</fullName>
    <label>Agency Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoption Search &amp; Reunion Services (Agency)</fullName>
            </value>
            <value>
                <fullName>Adult literacy services (Agency)</fullName>
            </value>
            <value>
                <fullName>Alcohol assessment (Agency)</fullName>
            </value>
            <value>
                <fullName>Annual Credit Report (Agency)</fullName>
            </value>
            <value>
                <fullName>Annual Life Skills Assessment (Agency)</fullName>
            </value>
            <value>
                <fullName>Assessment Services (Agency)</fullName>
            </value>
            <value>
                <fullName>Birth Certificate Provided (Agency)</fullName>
            </value>
            <value>
                <fullName>Budget and Financial Management- ETV (Agency)</fullName>
            </value>
            <value>
                <fullName>Budget and Financial Management- Gen (Agency)</fullName>
            </value>
            <value>
                <fullName>Camping (Agency)</fullName>
            </value>
            <value>
                <fullName>Career Preparation Empl Prg- ETV (Agency)</fullName>
            </value>
            <value>
                <fullName>Career Preparation Empl Prg- Gen (Agency)</fullName>
            </value>
            <value>
                <fullName>Child Care (Agency)</fullName>
            </value>
            <value>
                <fullName>Child Development (Agency)</fullName>
            </value>
            <value>
                <fullName>Chore services, extermination (Agency)</fullName>
            </value>
            <value>
                <fullName>Clothing purchase (Agency)</fullName>
            </value>
            <value>
                <fullName>Confidential Intermediary Services (Agency)</fullName>
            </value>
            <value>
                <fullName>Consumer education (Agency)</fullName>
            </value>
            <value>
                <fullName>Crisis Counseling (Agency)</fullName>
            </value>
            <value>
                <fullName>DSS Provided Group Work (Agency)</fullName>
            </value>
            <value>
                <fullName>Dental (Agency)</fullName>
            </value>
            <value>
                <fullName>Drug assessment (Agency)</fullName>
            </value>
            <value>
                <fullName>Drug/Alcohol assessment (Agency)</fullName>
            </value>
            <value>
                <fullName>Education and Risk Prevention - General (Agency)</fullName>
            </value>
            <value>
                <fullName>Education and Risk Prevention- ETV (Agency)</fullName>
            </value>
            <value>
                <fullName>Educational Academic Support-ETV (Agency)</fullName>
            </value>
            <value>
                <fullName>Educational Academic Support-General (Agency)</fullName>
            </value>
            <value>
                <fullName>Educational Records Provided (Agency)</fullName>
            </value>
            <value>
                <fullName>Educational-High School (Agency)</fullName>
            </value>
            <value>
                <fullName>Educational-Higher educational (Agency)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>