force-app/main/default/objects/ServiceLog__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Service Case is closed.</errorMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ServiceLogs</relationshipName>
    <type>Lookup</type>
</CustomField>