force-app/main/default/objects/ServiceLog__c/fields/Client_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Program_Name__c</fullName>
    <label>Client Program Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Guardianship Assistance Program</fullName>
            </value>
            <value>
                <fullName>Out of Home</fullName>
            </value>
            <value>
                <fullName>CPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>