force-app/main/default/objects/ServiceLog__c/fields/Structure_Services__c.field-meta.xml
<CustomField>
    <fullName>Structure_Services__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Structure/Services</label>
    <referenceTo>Structure_Services__c</referenceTo>
    <relationshipName>ServiceLogs</relationshipName>
    <type>Lookup</type>
</CustomField>